// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`respond responds to the issue in the payload 1`] = `
Array [
  Array [
    Object {
      "body": "a body",
      "number": 1,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;

exports[`respond responds to the issue with the specified number 1`] = `
Array [
  Array [
    Object {
      "body": "a body",
      "number": 2,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;

exports[`respond responds to the issue with the specified title 1`] = `
Array [
  Array [
    Object {
      "body": "a body",
      "number": 2,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;
